# fin

./: Cargo.toml  README.md  spin.toml
files/: finger.json  finger.md  friends.json  plan.md
files/templates/: bottom_partial.hbs  edit_plan.hbs  feed.hbs  finger.hbs  finger_partial.hbs  friends_partial.hbs  history.hbs  index.hbs  navbar_partial.hbs  plan.hbs  plan_partial.hbs  top_partial.hbs
src/: auth.rs  dates.rs  lib.rs  redis.rs  types.rs
static/style/: style.css
