[package]
name = "finger"
authors = ["Matt Butcher <matt.butcher@fermyon.com>"]
description = "An HTTP equivalent to UNIX Finger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v0.5.0" }
# Crate that generates Rust Wasm bindings from a WebAssembly interface.
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }
# Markdown
pulldown-cmark = { version = "0.9.2", default-features = false }
# Handlebars templates
handlebars = { version = "4.3.5", features = ["dir_source"]}
# JSON serializer
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Query String parser
serde_qs = "0.10"
# HTML sanitizer
ammonia = "3"
# HTTP Basic auth scheme support
http-auth-basic = "0.3.3"

[workspace]
